force-app/main/default/objects/TW_Order_Manual__c/TW_Order_Manual__c.object-meta.xml
<CustomObject>
    <description>Orders uploaded through dataloader then processed via batch job</description>
    <label>TW Order Manual</label>
    <nameField>
        <displayFormat>OM-{000000000}</displayFormat>
        <label>TW Order Manual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TW Orders Manual</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>