force-app/main/default/objects/TW_Order_Manual__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <label>Birthdate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>