force-app/main/default/objects/TW_Order_Manual__c/fields/Error_Reason__c.field-meta.xml
<CustomField>
    <fullName>Error_Reason__c</fullName>
    <label>Error Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>