force-app/main/default/objects/TW_Order_Manual__c/fields/Preferred_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Delivery_Date__c</fullName>
    <label>Preferred Delivery Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>