force-app/main/default/objects/TW_Order_Manual__c/fields/Preferred_Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Delivery_Time__c</fullName>
    <label>Preferred Delivery Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>