force-app/main/default/objects/TW_Order_Manual__c/fields/Pricebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Name__c</fullName>
    <label>Pricebook Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>