force-app/main/default/objects/TW_Order_Manual__c/fields/Product_1__c.field-meta.xml
<CustomField>
    <fullName>Product_1__c</fullName>
    <label>Product 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>