force-app/main/default/objects/TW_Order_Manual__c/fields/Product_2__c.field-meta.xml
<CustomField>
    <fullName>Product_2__c</fullName>
    <label>Product 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>