force-app/main/default/objects/TW_Order_Manual__c/fields/Product_3__c.field-meta.xml
<CustomField>
    <fullName>Product_3__c</fullName>
    <label>Product 3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>