force-app/main/default/objects/TW_Order_Manual__c/fields/Promoter_Code__c.field-meta.xml
<CustomField>
    <fullName>Promoter_Code__c</fullName>
    <label>Promoter Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>