force-app/main/default/objects/TW_Order_Manual__c/fields/Quantity_1__c.field-meta.xml
<CustomField>
    <fullName>Quantity_1__c</fullName>
    <label>Quantity 1</label>
    <length>5</length>
    <type>Text</type>
</CustomField>