force-app/main/default/objects/TW_Order_Manual__c/fields/Quantity_2__c.field-meta.xml
<CustomField>
    <fullName>Quantity_2__c</fullName>
    <label>Quantity 2</label>
    <length>5</length>
    <type>Text</type>
</CustomField>