force-app/main/default/objects/TW_Order_Manual__c/fields/Quantity_3__c.field-meta.xml
<CustomField>
    <fullName>Quantity_3__c</fullName>
    <label>Quantity 3</label>
    <length>5</length>
    <type>Text</type>
</CustomField>