force-app/main/default/objects/TW_Order_Manual__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <label>Sales Person</label>
    <length>20</length>
    <type>Text</type>
</CustomField>