force-app/main/default/objects/TW_Order_Manual__c/fields/Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID__c</fullName>
    <label>Tax ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>