force-app/main/default/objects/TW_Order_Manual__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>VAT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>