force-app/main/default/objects/TW_Order_Manual__c/recordTypes/Pending_Error.recordType-meta.xml
<RecordType>
    <fullName>Pending_Error</fullName>
    <active>true</active>
    <label>Pending/Error</label>
</RecordType>